--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.sound.min.js"></script>
-  <script src="single_pendulum.js"></script>
+  <script src="coupled-pendulum.js"></script>
 </head>
 
 <body>
