--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       margin: 0;
     }
   </style>
+  <script src="libraries/rk45.js"></script>
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.sound.min.js"></script>
   <script src="coupled-pendulum.js"></script>
