Created new file, copy of coupled-pendulum with graphs included. (Comments are not made yet)

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       margin: 0;
     }
   </style>
-  <script src="libraries/rk45.js"></script>
+  <script src="libraries/grafica.js"></script>
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.sound.min.js"></script>
-  <script src="coupled-pendulum.js"></script>
+  <script src="coupledtest.js"></script>
 </head>
 
 <body>
