Initial commit for elastic-pendulum simulation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="libraries/grafica.js"></script>
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.sound.min.js"></script>
-  <script src="coupledtest.js"></script>
+  <script src="elastic-pendulum.js"></script>
 </head>
 
 <body>
