Initial commit to create sim-tools.js

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     }
   </style>
   <script src="libraries/grafica.js"></script>
+  <script src="sim-tools.js"></script>
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.sound.min.js"></script>
-  <script src="elastic-pendulum.js"></script>
+  <script src="coupledtest.js"></script>
 </head>
 
 <body>
