--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
+  <title>Prototype simulation</title>
   <style>
     body {
       padding: 0;
@@ -14,8 +14,8 @@
   <script src="libraries/grafica.js"></script>
   <script src="sim-tools.js"></script>
   <script src="libraries/p5.js"></script>
-  <script src="libraries/p5.sound.min.js"></script>
-  <script src="coupledtest.js"></script>
+  <script src="nbody.js"></script>
+  <script src="nbodysim.js"></script>
 </head>
 
 <body>
